# othello.rs

./: .gitignore  Cargo.toml  README.adoc  TODO.adoc
.github/workflows/: rust_linux.yml  rust_macos.yml  rust_windows.yml
src/: lib.rs  main.rs
src/othello/: algorithms.rs  bot.rs  evaluate.rs  mod.rs  moves.rs  player.rs  types.rs
src/util/: mod.rs  procs.rs  values.rs
