[package]
name = "othello_rs"
version = "0.1.0"
authors = ["aurumcodex <aurumcodex@protonmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.3"
rand = "0.7"
# rayon = "1.5"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
opt-level = 3