# Minimum Supported Rust Version: 1.36.0 (?)

[package]
name = "othello_rs"
version = "0.1.0" # 0.1.0 is base implementation, sequential evaluation, no parallelism
authors = ["aurumcodex <aurumcodex@protonmail.com>"]
edition = "2018"
license = "MIT"
publish = false # not planning on hosting this on any crate registries

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
once_cell = "1" # mrvs: 1.31.1 (or 1.37.0 for parking_lot feature)
pico-args = "0.3" # mvrs: 1.31.0
rand = "0.7" # mvrs: 1.32.0 for "0.7"; 1.36.0 for "0.8"
rayon = "1.5" # mrvs: 1.36.0
# termion = "*" # gonna add this later, once original implementation's done

[profile.dev]
lto = "thin"
opt-level = 2

[profile.release]
lto = "thin"
opt-level = 3